adding the game rules

--- a/index.html
+++ b/index.html
@@ -7,7 +7,52 @@
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-	<h1>Ola</h1>
+	<div class="container">
+		<div class="left-area">
+			<h1>Regras do jogo</h1>
+			<ul>
+				<li>
+					Nem todas as palavras que existem estão listadas no jogo
+				</li>
+				<li>
+					As palavras devem ter pelo menos 4 letras
+				</li>
+				<li>
+					As palavras devem, obrigatoriamente, ter a letra central
+				</li>
+				<li>
+					As letras podem ser usadas mais de uma vez
+				</li>
+				<li>
+					Algumas palavras podem não estar listadas(termos científicos, jagões, palavras ofensivas, determinados pronomes, proposições e conjunções)
+				</li>
+				<li>
+					Somente verbos no infinitivo são válidos. Exemplo: "SUBIR", "CORRER", "JOGAR"
+				</li>
+				<li>
+					Ambos os gêneros da palavra são válidos. Exemplo: "ALUNO" e "ALUNA"
+				</li>
+				<li>
+					Plurais não são válidos. Exemplo: "LARANJAS" e "MAÇÃS", no plural, não são válidas
+				</li>
+			</ul>
+			<div class="word-area">
+				<input type="text" name="word">
+			</div>
+			<div class="letters-area">
+				<span>A</span>
+				<span>E</span>
+				<span>I</span>
+				<span>O</span>
+				<span>D</span>
+				<span>G</span>
+				<span>P</span>
+			</div>
+		</div>
+		<div class="right-area">
+			
+		</div>
+	</div>
 <script type="text/javascript" src="assets/script.js"></script>
 </body>
 </html>
