--- a/index.html
+++ b/index.html
@@ -40,17 +40,109 @@
 				<input type="text" name="word">
 			</div>
 			<div class="letters-area">
-				<span>A</span>
-				<span>E</span>
-				<span>I</span>
-				<span>O</span>
-				<span>D</span>
-				<span>G</span>
-				<span>P</span>
+				<span class="letter">A</span>
+				<span class="letter">E</span>
+				<span class="letter">I</span>
+				<span class="letter active">O</span>
+				<span class="letter">D</span>
+				<span class="letter">G</span>
+				<span class="letter">P</span>
 			</div>
 		</div>
 		<div class="right-area">
-			
+			<div class="list">
+				<input type="text" class="correct" placeholder="4 Letras" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
+			<div class="list">
+				<input type="text" readonly>
+			</div>
 		</div>
 	</div>
 <script type="text/javascript" src="assets/script.js"></script>
