creating JS function to add fields on page

--- a/index.html
+++ b/index.html
@@ -49,102 +49,9 @@
 				<span class="letter">P</span>
 			</div>
 		</div>
-		<div class="right-area">
-			<div class="list">
-				<input type="text" class="correct" placeholder="4 Letras" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-			<div class="list">
-				<input type="text" readonly>
-			</div>
-		</div>
+		<div class="right-area"></div>
 	</div>
+<script type="text/javascript" src="assets/palavras.js"></script>
 <script type="text/javascript" src="assets/script.js"></script>
 </body>
 </html>
