including words counter

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 				<span class="letter">P</span>
 			</div>
 		</div>
+		<div class="words-total"><span class="current-number">10</span>/<span class="total-words"></span></div>
 		<div class="right-area"></div>
 	</div>
 <script type="text/javascript" src="assets/palavras.js"></script>
