addding function to show messages on screen

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					Plurais não são válidos. Exemplo: "LARANJAS" e "MAÇÃS", no plural, não são válidas
 				</li>
 			</ul>
+			<div class="msg"><p></p></div>
 			<div class="word-area">
 				<input type="text" name="word">
 			</div>
